[package]
name = "iota_ed25519_addresses"
version = "0.1.0"
authors = ["Thoralf-M"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.3.1"
ed25519-dalek = "1.0.0-pre.3"
byteorder = "1.3.4"
multihash = "*"
rand_core = "0.5.0"